# itch-5.0-parser

./: .gitignore  :w  CMakeLists.txt  README.md
analysis/: plot_latency_distribution.py
benchmark/: bm_ops.cpp  bm_parser.cpp  bm_parser_v1.cpp  bm_parser_v2.cpp
build-asan/: CMakeCache.txt  Makefile  benchmark  cmake_install.cmake  compile_commands.json  perf_bench
build-perf/: CMakeCache.txt  Makefile  benchmark  cmake_install.cmake  compile_commands.json  perf_bench
include/: example_benchmark.hpp  example_benchmark_parsing.hpp  hash_map.hpp  heap_level.hpp  itch_parser.hpp  order_book.hpp  order_book_handler_single.hpp  order_book_shared.hpp  parser.hpp  parser_handler.hpp  parser_v1.hpp  parser_v2.hpp  vector_level.hpp  vector_level_split_array.hpp
include/benchmarks/: benchmark_utils.hpp  example_benchmark.hpp
include/levels/: btree_level.hpp  heap_level.hpp  map_level.hpp  vector_level_b_search.hpp  vector_levels_b_search_split.hpp
results/: parsing_and_order_book_latency_distribution.csv  parsing_lantecy_distribution.csv  prices.csv
src/: main.cpp  parser.cpp
src/benchmarks/: benchmark_utils.cpp
